[package]
name = "babucoin_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.8"
derive-new = "*"
serde = { version = "*", features = ["derive"] }
chrono = "*"
serde_json = "*"
actix-web = "3"
